# music_database

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  config.yaml.example
migrations/2017-10-18-074805_create_library/: down.sql
migrations/2018-01-26-054844_create_library/: down.sql  up.sql
migrations/2018-01-26-054946_create_last_check/: down.sql  up.sql
migrations/2018-02-03-222427_library_add_mtime/: down.sql  up.sql
migrations/2018-02-04-010109_library_mtime_non_null/: down.sql  up.sql
schema/: up.sql
schema/down/: 0001_last_check_table.sql
schema/up/: 0000_library_table.sql  0001_last_check_table.sql
sql/: clear_fulfilled_acoustid_checks.sql  differences.sql  test_join.sql
src/: acoustid.rs  basic_types.rs  config.rs  database.rs  elasticsearch.rs  file_processor.rs  file_scanner.rs  fingerprint.rs  lib.rs  main.rs  media_file_info.rs  models.rs  processor.rs  schema.rs
