[package]
name = "music_card_catalog"
version = "0.1.0"
authors = ["Matt Bilker <me@mbilker.us>"]

[dependencies]
chromaprint = "~0.1.2"
chrono = "~0.4.0"
clap = "2.29.2"
crossbeam = "~0.3.0"
dotenv  = "~0.10.1"
elastic = "~0.20.5"
elastic_derive = "~0.20.5"
fallible-iterator = "~0.1.4"
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg.git" }
futures = "~0.1.17"
futures-cpupool = "~0.1.7"
futures-ratelimit = { git = "https://github.com/mbilker/futures-ratelimit.git" }
hyper = "~0.11.7"
hyper-tls = "~0.1.2"
log = "0.4.1"
mediainfo = "~0.1.3"
postgres = { version = "~0.15", features = ["with-chrono", "with-uuid"] }
pretty_env_logger = "0.2.0"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
ratelimit = "~0.4.3"
serde = "~1.0.21"
serde_derive = "~1.0.21"
serde_json = "~1.0.6"
serde_yaml = "~0.7.2"
tokio-core = "~0.1.10"
tokio-service = "~0.1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }
walkdir = "~2.0.1"

[profile.release]
debug = true
