[package]
name = "music_card_catalog"
version = "2.0.0"
authors = ["Matt Bilker <me@mbilker.us>"]

[dependencies]
chromaprint = "~0.1.2"
chrono = "~0.4.0"
clap = "2.29.2"
crossbeam = "~0.3.0"
diesel = { version = "1.1.1", default-features = false, features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
dotenv  = "0.11"
elastic = "~0.20.5"
elastic_derive = "~0.20.5"
fallible-iterator = "~0.1.4"
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg.git" }
futures = "0.1.18"
futures-cpupool = "0.1.8"
hyper = "~0.11.7"
hyper-tls = "~0.1.2"
log = "0.4.1"
mediainfo = "~0.1.3"
postgres = { version = "0.15.1", features = ["with-chrono", "with-uuid"] }
pretty_env_logger = "0.2.0"
quick-error = "1.2.1"
r2d2 = "0.8.2"
ratelimit = "0.4.3"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serde_yaml = "0.7.3"
tokio-core = "0.1.12"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
walkdir = "2.1"

[profile.release]
debug = true
